--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 bevy="0.15"
+bevy_common_assets={ version="*", features=['json']}
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+serde = "1.0.218"
 serde_json = "1.0.139"
 
 [build]
